import one million some shit, tomorrow i'll try to fix all

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,10 +15,7 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
-h1{
-    color: red;
-    font-size: 10rem;
-    text-align: center;
-    // border: solid black 2px;
-    // border-radius: 50px;
+html,
+body{
+background-color: rgb(22, 90, 69);
 }
