--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -73,8 +73,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
-h1 {
-  color: red;
-  font-size: 10rem;
-  text-align: center;
+html,
+body {
+  background-color: rgb(22, 90, 69);
 }
