--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <header>
   <div>
-    <app-data></app-data>
+    <app-layout></app-layout>
   </div>
 </header>
-<div>
-  <h1 class='bg-neutral-900'>
-  {{title}}
-</h1>
-</div>
+<app-layout>
+  <h1>{{title}}</h1>
+</app-layout>
