--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<header>
-  <div>
-    <app-layout></app-layout>
-  </div>
-</header>
 <app-layout>
-  <h1>{{title}}</h1>
-</app-layout>
+  <router-outlet></router-outlet>
+</app-layout>|
+<mat-icon>Home</mat-icon>
