--- a/src/app/components/ui/layout/header/header.component.html
+++ b/src/app/components/ui/layout/header/header.component.html
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-      <li>
-        <a href="#">
-            <i class="fa-solid fa-star"></i> Home
+      <li *ngFor="let item of menuItems">
+        <a [routerLink]="item.path">
+          <mat-icon>{{ item.icon }}</mat-icon>
         </a>
       </li>
     </ul>
