--- a/src/app/components/ui/layout/layout.component.scss
+++ b/src/app/components/ui/layout/layout.component.scss
@@ -1,14 +1,6 @@
-// .timeWord {
-//     width: auto;
-//     max-width: 6rem;
-//     border: solid black 2px;
-//     border-radius: 10px;
-//     text-align: center;
-//     margin-left: auto;
-//     margin-top: 0;
-//     background-color: rgb(4 120 87)
-// }
-.layout {
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+.layout{
     @apply mx-auto;
     max-width: 500px;
 }
