--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
