--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,13 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    background-color: rgb(30, 121, 30);
+}
+
