roating + ngClass/If/...

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-layout>
-  <router-outlet></router-outlet>
-</app-layout>
-<!-- <mat-icon>Home</mat-icon> -->
+<!-- <router-outlet></router-outlet> -->
+<app-layout></app-layout>
+<!-- {{title}} -->
