--- a/src/app/components/ui/layout/layout.component.html
+++ b/src/app/components/ui/layout/layout.component.html
@@ -1,5 +1,15 @@
-<div class='layout'>
-    <app-header></app-header>
-    <ng-content></ng-content>
+<div><button *ngIf="isCollapsed" (click)="toggleCollapse()">Show</button>
+<button *ngIf="!isCollapsed" (click)="toggleCollapse()">Hide</button>
+
+<div>
+    <p *ngIf="!isCollapsed">FUUUCK</p>
 </div>
-<button (click)="myEvent($event)">Click Me</button>
+</div>
+<input type="text" [(ngModel)]="text">
+<p>{{text}}</p>
+
+<div [ngClass]="{invisible: visibility}">
+    <h1>Sup</h1>
+    <p [ngClass]="{class2: true}">Shut up and teach</p>
+</div>
+<button (click)='toggle()'>On/Off</button>
