--- a/src/app/components/ui/layout/layout.component.scss
+++ b/src/app/components/ui/layout/layout.component.scss
@@ -1,6 +1,3 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
-
-.layout{
-    @apply mx-auto;
-    max-width: 500px;
+.invisible{
+    display: none;
 }
