--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,4 +10,8 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body {
+  background-color: rgb(33, 43, 97);
 }
