--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 @tailwind utilities;
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-// body {
-//     // background-color: rgb(30, 121, 30);
-// }
+body {
+    background-color: rgb(33, 43, 97);
+}
 
