--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 html, body {
-  height: 100%;
+  height: 90%;
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-body {
-  background-color: rgb(33, 43, 97);
+  @apply mx-auto;
+  max-width: 750px;
+  border: solid 2px black;
+  border-radius: 10px;
 }
