add style for ui links

--- a/src/app/components/ui/layout/layout.component.html
+++ b/src/app/components/ui/layout/layout.component.html
@@ -1,11 +1,3 @@
+<div style="background-color: white;">
 <app-header></app-header>
-<div>
-    <nav>
-        <ul>
-            <li>
-                <a></a>
-            </li>
-        </ul>
-    </nav>
-
 </div>
