--- a/src/app/components/ui/layout/header/header.component.css
+++ b/src/app/components/ui/layout/header/header.component.css
@@ -3,3 +3,85 @@
   max-height: 75px;
   margin: 5px 20px;
 }
+
+.nav {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 450px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 1rem;
+  background-color: #ffffff;
+  padding: 1rem;
+}
+.nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 100%;
+}
+.nav li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+.nav li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  color: #ff7f50;
+  font-size: 2rem; /* Increase the font size as desired */
+  -webkit-transition: color 0.3s linear;
+  transition: color 0.3s linear;
+}
+.nav li a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 100%;
+  background-color: #ff7f50;
+  -webkit-transition: width 0.3s linear;
+  transition: width 0.3s linear;
+  z-index: -1;
+  border-radius: 3px;
+}
+.nav li a:hover::before {
+  width: 100%;
+  right: 0;
+}
+.nav li a:hover {
+  color: #ffffff;
+}
