--- a/src/app/components/ui/layout/header/header.component.html
+++ b/src/app/components/ui/layout/header/header.component.html
@@ -1,3 +1,4 @@
+
 <div>
     <a href="#">
     <img class="MainLogo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" alt="logo">
@@ -5,11 +6,15 @@
 <h1 class="font-bold mb-2 text-center text-lg">{{AppName | titlecase}}</h1>
 </div>
 <div>
-    <nav>
-        <ul>
-            <li>
-                <a href="#"><mat-icon>home</mat-icon></a>
-            </li>
-        </ul>
+    <nav class="nav">
+      <ul>
+        <li *ngFor="let item of ItemMenu">
+          <a [routerLink]="item.path">
+            <mat-icon class="icon">{{item.icon}}</mat-icon>
+          </a>
+        </li>
+      </ul>
     </nav>
-</div>
+  </div>
+
+  
