--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 html, body {
-  height: 90%;
+  height: 100%;
 }
 
 body {
+  @apply h-full;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   @apply mx-auto;
-  max-width: 750px;
+  max-width: 500px;
   border: solid 2px black;
   border-radius: 10px;
 }
