--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,10 +5,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body { height: 90%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+
+
+html, body { height: 100%; }
+body { @apply h-full; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 @apply mx-auto;
-max-width: 750px; 
+max-width: 500px; 
 border: solid 2px black;
 border-radius: 10px;}
 
