--- a/src/app/components/ui/layout/layout.component.html
+++ b/src/app/components/ui/layout/layout.component.html
@@ -1,6 +1,7 @@
-<div style="background-color: white;">
-<app-header></app-header>
-<div class="max-w-2xl container mx-auto pt-5 rounded-xl">
-<app-product></app-product>
-</div>
-</div>
+<div>
+    <app-header></app-header>
+    <div class="max-w-2xl container mx-auto pt-5 rounded-xl">
+      <app-product></app-product>
+    </div>
+  </div>
+  
