--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -1,5 +1,12 @@
-<p class="rounded-x1 shadow-sm" (mouseover)="realText = true" (mouseout)="realText = false">
-    <span *ngIf="!realText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque mollitia itaque vel labore ex quis fugiat impedit, dolor blanditiis repudiandae rem iure facere obcaecati, aliquid modi culpa distinctio quia assumenda.
-    </span>
-    <span *ngIf="realText">Не завидую тому, кто будет делать код ревью конечно...</span>
+<div>
+  <button *ngFor="let item of TuggleMode" (click)="toggleDarkMode()" [ngClass]="isIndexHtmlDark ? 'rounded-x1 shadow-sm bg-slate-800 text-w mx-auto' : 'bg-white rounded-x1 shadow-sm text-slate-800'">
+    <mat-icon *ngIf="isIndexHtmlDark">light_mode</mat-icon>
+    <mat-icon *ngIf="!isIndexHtmlDark">nights_stay</mat-icon>
+  </button>
+</div>
+<p [ngClass]="isIndexHtmlDark ? 'rounded-x1 shadow-sm bg-slate-800 text-w mx-auto' : 'bg-white rounded-x1 shadow-sm text-slate-800'"
+   (mouseover)="realText = true"
+   (mouseout)="realText = false">
+  <span *ngIf="!realText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque mollitia itaque vel labore ex quis fugiat impedit, dolor blanditiis repudiandae rem iure facere obcaecati, aliquid modi culpa distinctio quia assumenda.</span>
+  <span *ngIf="realText">Не завидую тому, кто будет делать код ревью конечно...</span>
 </p>
