--- a/src/app/components/ui/layout/header/header.component.html
+++ b/src/app/components/ui/layout/header/header.component.html
@@ -1,20 +1,27 @@
-
-<div>
-    <a href="#">
-    <img class="MainLogo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" alt="logo">
-</a>
-<h1 class="font-bold mb-2 text-center text-lg">{{AppName | titlecase}}</h1>
+<div class="header grid grid-cols-3">
+  <div class="logoLink ">
+    <a href="https://angular.io/docs" target="_blank" class="flex items-center">
+      <img class="MainLogo w-16 h-16 " src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png" alt="logo">
+    </a>
+  </div>
+  <div class="nameContainer text-center ">
+    <h1 class="font-bold mb-2 text-lg text-orange-500">
+      {{AppName | titlecase}}
+    </h1>
+  </div>
 </div>
-<div>
-    <nav class="nav">
-      <ul>
-        <li *ngFor="let item of ItemMenu">
-          <a [routerLink]="item.path">
-            <mat-icon class="icon">{{item.icon}}</mat-icon>
+
+  <div>
+    <nav [ngClass]="darkModeON ? 'nav-dark' : 'nav-light'">
+      <ul >
+        <li *ngFor='let item of ItemMenu'>
+          <a [routerLink]='item.path'>
+            <mat-icon class='icon'>{{item.icon}}</mat-icon>
           </a>
         </li>
       </ul>
     </nav>
   </div>
+
 
   
