added full dark mode

--- a/src/app/components/ui/layout/header/header.component.html
+++ b/src/app/components/ui/layout/header/header.component.html
@@ -11,17 +11,17 @@
   </div>
 </div>
 
-  <div>
-    <nav [ngClass]="darkModeON ? 'nav-dark' : 'nav-light'">
-      <ul >
-        <li *ngFor='let item of ItemMenu'>
-          <a [routerLink]='item.path'>
-            <mat-icon class='icon'>{{item.icon}}</mat-icon>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+<div>
+  <nav [ngClass]="{ 'nav-dark': darkModeON, 'nav-light': !darkModeON }">
+    <ul>
+      <li *ngFor="let item of ItemMenu">
+        <a [routerLink]="item.path">
+          <mat-icon class="icon">{{item.icon}}</mat-icon>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
 
 
   
