added rx слушатель

--- a/src/app/components/ui/layout/header/header.component.scss
+++ b/src/app/components/ui/layout/header/header.component.scss
@@ -9,6 +9,7 @@
   gap: 1rem;
   background-color: #ffffff;
   padding: 1rem;
+  border: solid 1px #1e293b;
   border-radius: 10px;
 
   ul {
@@ -74,6 +75,8 @@
   gap: 1rem;
   background-color: #1e293b;
   padding: 1rem;
+  border: solid 1px white;
+  border-radius: 10px;
 
   ul {
     list-style: none;
