--- a/src/app/components/ui/layout/header/header.component.scss
+++ b/src/app/components/ui/layout/header/header.component.scss
@@ -1,5 +1,5 @@
 .nav-light {
-  position: fixed;
+  position: absolute;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
@@ -65,7 +65,7 @@
 
 
 .nav-dark {
-  position: fixed;
+  position: absolute;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
