--- a/src/app/components/ui/layout/layout.component.html
+++ b/src/app/components/ui/layout/layout.component.html
@@ -1,7 +1,8 @@
 <div>
-    <app-header></app-header>
-    <div class="max-w-2xl container mx-auto pt-5 rounded-xl">
-      <app-product></app-product>
-    </div>
+  <app-header></app-header>
+  <div class="max-w-2xl container mx-auto pt-5 rounded-xl px-4">
+
+    <app-product *ngFor="let product of products" [product]="product">
+    </app-product>
   </div>
-  
+</div>
