--- a/src/app/components/ui/layout/layout.component.html
+++ b/src/app/components/ui/layout/layout.component.html
@@ -1,8 +1,8 @@
 <div>
   <app-header></app-header>
   <div class="max-w-2xl container mx-auto pt-5 rounded-xl px-4">
-
-    <app-product *ngFor="let product of products" [product]="product">
+<p *ngIf="loading" class="text-center text-lg">Loading...</p>
+    <app-product *ngFor="let product of products$ | async" [product]="product">
     </app-product>
   </div>
 </div>
