global error service + clear

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="max-h-screen">
+    <app-global-error></app-global-error>
 <app-layout>
     <router-outlet></router-outlet>
 </app-layout>
