--- a/src/app/components/global-error/global-error.component.html
+++ b/src/app/components/global-error/global-error.component.html
@@ -1,3 +1,5 @@
-<div class="h-[50px] flex justify-center items-center bg-yellow-400 text-black">
-{{errorService.error$ | async}}
-</div>>
+<div *ngIf="errorService.error$ | async as error"
+    class="h-[50px] flex justify-center items-center rounded-md bg-yellow-400 text-black relative">
+    {{errorService.error$| async}}
+    <button class="absolute top-2 right-4 text-white" (click)="errorService.clear()">&times;</button>
+</div>
