--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="max-h-screen">
+<!-- <div>
     <app-global-error></app-global-error>
 <app-layout>
     <router-outlet></router-outlet>
 </app-layout>
-</div>
+</div> -->
