--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -1,3 +1,4 @@
+
 <div class="py-4 px-6 border rounded flex items-center flex-col mb-2">
  
   <img [src]="product.image" [alt]="product.title" class="w-1/6 mb-2 transform motion-safe:hover:scale-110">
@@ -10,8 +11,8 @@
   (click)="moreDetails = !moreDetails">
     {{moreDetails? 'Hide' : 'Show'}} description
   </button>
-  <div *ngIf="moreDetails" class="w-64">
-    <p [ngClass]="isIndexHtmlDark ? ' bg-slate-800 text-white' : 'bg-white text-slate-800'">
+  <div *ngIf="moreDetails" class="w-64 max-h-{50} overflow-auto">
+    <p [ngClass]="isIndexHtmlDark ? ' bg-slate-800 text-white max-h-300 overflow-auto' : 'bg-white text-slate-800'">
       {{product.description}}
     </p>
     <p [ngClass]="isIndexHtmlDark ? ' bg-slate-800 text-white' : 'bg-white text-slate-800'">
