--- a/src/app/components/ui/layout/layout.component.html
+++ b/src/app/components/ui/layout/layout.component.html
@@ -1,6 +1,10 @@
 <div>
+
   <app-header></app-header>
-  <div class="max-w-2xl container mx-auto pt-5 rounded-xl px-4">
+  <div>
+    <input type="text" class="border border-gray-300 rounded-md p-2 placeholder-gray-400 mx-4 mt-5 mb-0" placeholder="Search">
+  </div>
+  <div class="max-w-2xl container mx-auto pt-5 rounded-xl px-4 max-h-screen">
 <p *ngIf="loading" class="text-center text-lg">Loading...</p>
     <app-product *ngFor="let product of products$ | async" [product]="product">
     </app-product>
