--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
-<!-- <div>
+<div>
     <app-global-error></app-global-error>
-<app-layout>
-    <router-outlet></router-outlet>
-</app-layout>
-</div> -->
+    
+      <nav>
+        <a routerLink=""></a>
+        <a routerLink="sale">
+        </a>
+        <a routerLink="favorite"></a>
+        <a routerLink="profile"></a>
+      </nav>
+      <app-layout>
+        <router-outlet></router-outlet>
+    </app-layout>
+    </div>
