--- a/src/app/components/ui/layout/layout.component.html
+++ b/src/app/components/ui/layout/layout.component.html
@@ -9,4 +9,7 @@
     <app-product *ngFor="let product of products$ | async" [product]="product">
     </app-product>
   </div>
+  <div>
+    <app-favorite></app-favorite>
+  </div>
 </div>
